Import online and offiline implemented as well as export functionality locallly