@@ -1,9 +1,13 @@
-package life.genny.bootxport.data;
+package life.genny.bootxport.xport;
 
-import io.vavr.collection.List;
+import java.util.List;
+import java.util.stream.Collectors;
+//import io.vavr.collection.List;
 import io.vavr.collection.Map;
 import io.vavr.collection.Set;
 import io.vavr.collection.Stream;
+import life.genny.bootxport.data.Realm;
+import life.genny.bootxport.data.ServiceStore;
 import life.genny.qwanda.Ask;
 import life.genny.qwanda.Question;
 import life.genny.qwanda.QuestionQuestion;
@@ -51,7 +55,7 @@ public class Processor {
   
   public static Processor p = null;
   
-  static List<Realm> multitenancy;
+  public static List<Realm> multitenancy;
   
   public static Processor getProcessor() {
     if(p != null)
@@ -131,10 +135,10 @@ public class Processor {
     GennyData data = ServiceStore.getServiceStore().data;
 
 
-    Map<String, io.vavr.collection.List<BaseEntity>> baseEntitysGroupByRealm =
+    Map<String, List<BaseEntity>> baseEntitysGroupByRealm =
         Stream.ofAll(data.getBaseEntitys())
            .groupBy(be -> be.getRealm())
-           .bimap(k -> k, v -> v.toList());
+           .bimap(k -> k, v -> v.toJavaList());
     
     Set<Realm> realms = baseEntitysGroupByRealm
         .keySet()
@@ -142,35 +146,35 @@ public class Processor {
 
     Map<String, List<Attribute>> attributestGroupByRealm = Stream.ofAll(data.getAttributess())
        .groupBy(attr -> attr.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<Validation>>  validationsGroupByRealm = Stream.ofAll(data.getValidations())
        .groupBy(vals -> vals.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<QBaseMSGMessageTemplate>> messagesGroupByRealm = Stream.ofAll(data.getMessages())
        .groupBy(msgs -> msgs.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<QuestionQuestion>> questionQuestionGroupByRealm = Stream.ofAll(data.getQuestionQuestions())
        .groupBy(queQues -> queQues.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<Ask>> askGroupByRealm = Stream.ofAll(data.getAsks())
        .groupBy(asks -> asks.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<EntityEntity>> entityEntityGroupByRealm = Stream.ofAll(data.getEntityEntities())
        .groupBy(entEnts -> entEnts.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     Map<String, List<EntityAttribute>> entityAttributeGroupByRealm = Stream.ofAll(data.getEntityAttributes())
        .groupBy(entAttrs -> entAttrs.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
     
     Map<String, List<Question>> questionsGroupByRealm = Stream.ofAll(data.getQuestions())
        .groupBy(ques -> ques.getRealm())
-       .bimap(k -> k, v -> v.toList());
+       .bimap(k -> k, v -> v.toJavaList());
 
     setRealms(realms);
     setAskGroupByRealm(askGroupByRealm);
@@ -187,16 +191,19 @@ public class Processor {
     List<Realm> r = getRealms().toStream().map(realm ->{
      realm.setBaseEntitys(getBaseEntitysGroupByRealm().get(realm.getName()).get());
      realm.setAttributes(getAttributestGroupByRealm().get(realm.getName()).get());
-     realm.setAsks(getAskGroupByRealm().get(realm.getName()).get());
      realm.setEntityEntitys(getEntityEntityGroupByRealm().get(realm.getName()).get());
+     realm.setAsks(getAskGroupByRealm().get(realm.getName()).get());
      realm.setMessages(getMessagesGroupByRealm().get(realm.getName()).get());
      realm.setQuestionQuestions(getQuestionQuestionGroupByRealm().get(realm.getName()).get());
      realm.setValidations(getValidationsGroupByRealm().get(realm.getName()).get());
      realm.setEntityAttributes(getEntityAttributesGroupByRealm().get(realm.getName()).get());
      realm.setQuestions(getQuestionsGroupByRealm().get(realm.getName()).get());
+     System.out.println(realm);
      return realm;
-    }).toList();
+    }).collect(Collectors.toList());
       
+    r.forEach(System.out::println);
+    System.out.println(r);
     return r;
   }
 
